exports[`test Layout with childview 1`] = `
<div
  className="app-container">
  <style
    dangerouslySetInnerHTML={
      Object {
        "__html": "body{margin: 0;
      font-family: Helvetica Neue, Helvetica, Arial, sans-serif;}html{background: #eee;
      font-size: 100%;}@media (min-width: 550px){html{font-size: 120%;}}@media (min-width: 1200px){html{font-size: 140%;}}h1, h2, h3{font-weight: bold;}",
      }
    } />
  <header>
    <a
      onClick={[Function]}
      style={Object {}}>
      Home
    </a>
    <span
      style={
        Object {
          "margin": "0 5px",
        }
      }>
      |
    </span>
    <a
      onClick={[Function]}
      style={Object {}}>
      Users
    </a>
    <span
      style={
        Object {
          "margin": "0 5px",
        }
      }>
      |
    </span>
    <a
      onClick={[Function]}
      style={Object {}}>
      Products
    </a>
    <a
      href="/products">
      Products (direct linkz)
    </a>
  </header>
  <div
    className="app-content">
    <div>
      <span>
        hello
      </span>
      <h1>
        Index Page
      </h1>
      <a
        href="http://passport.dev:8000/oauth/authorize?client_id=7&redirect_uri=http://consumer.dev:8010/callback&response_type=code&scope=read:products read:categories">
        <img
          alt="Login with Mystore.no"
          src="https://s3-eu-west-1.amazonaws.com/mystore-api-auth-app/assets/mystore-api-login-btn.jpg"
          style={
            Object {
              "height": "auto",
              "width": 360,
            }
          } />
      </a>
    </div>
  </div>
  <footer
    style={
      Object {
        "borderTop": "1px solid #000",
        "marginTop": "15px",
      }
    }>
    <p>
      This is where the footer goes.
    </p>
  </footer>
</div>
`;

exports[`test Layout without childview 1`] = `
<div
  className="app-container">
  <style
    dangerouslySetInnerHTML={
      Object {
        "__html": "body{margin: 0;
      font-family: Helvetica Neue, Helvetica, Arial, sans-serif;}html{background: #eee;
      font-size: 100%;}@media (min-width: 550px){html{font-size: 120%;}}@media (min-width: 1200px){html{font-size: 140%;}}h1, h2, h3{font-weight: bold;}",
      }
    } />
  <header>
    <a
      onClick={[Function]}
      style={Object {}}>
      Home
    </a>
    <span
      style={
        Object {
          "margin": "0 5px",
        }
      }>
      |
    </span>
    <a
      onClick={[Function]}
      style={Object {}}>
      Users
    </a>
    <span
      style={
        Object {
          "margin": "0 5px",
        }
      }>
      |
    </span>
    <a
      onClick={[Function]}
      style={Object {}}>
      Products
    </a>
    <a
      href="/products">
      Products (direct linkz)
    </a>
  </header>
  <div
    className="app-content" />
  <footer
    style={
      Object {
        "borderTop": "1px solid #000",
        "marginTop": "15px",
      }
    }>
    <p>
      This is where the footer goes.
    </p>
  </footer>
</div>
`;
